--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JavaScript Lab</title>
-</head>
-<body>
-  hello
-</body>
+<html>
+  <head>
+    <title>Creating and Inserting DOM Elements</title>
+  </head>
+  <script type="application/javascript">
+  </script>
+  <body>
+    <main id="main"></main>
+  </body>
 </html>
