commit tree d983c523bc0156496d3097d802b5a762c3a33cc1

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Creating and Inserting DOM Elements</title>
+    <script defer src="index.js"></script>
   </head>
   <script type="application/javascript">
   </script>
   <body>
     <main id="main"></main>
-    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
